Add Postman API Key as GitHub secret

--- a/.github/workflows/update-postman-collection.yml
+++ b/.github/workflows/update-postman-collection.yml
@@ -2,7 +2,7 @@ name: Update Postman Collection
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Εκτελεί το action κάθε ώρα
+    - cron: '0 * * * *'  # Εκτελεί το action κάθε ώρα (μπορείς να το αλλάξεις)
 
 jobs:
   update-collection:
@@ -14,7 +14,7 @@ jobs:
 
     - name: Fetch Postman Collection
       run: |
-        curl -X GET "https://api.postman.com/collections/39579054-83f54cd5-6d8f-4317-87bb-1c7f68ef47d5?access_key=PMAT-01JC679VDCTD39M3A810G06R9R" \
+        curl -X GET "https://api.postman.com/collections/39579054-83f54cd5-6d8f-4317-87bb-1c7f68ef47d5?access_key=${{ secrets.POSTMAN_API_KEY }}" \
         -H "Accept: application/json" -o postman-collection.json
 
     - name: Commit and Push changes
@@ -23,5 +23,4 @@ jobs:
         author_name: "drpapadopoulou96"
         author_email: "dionysia.papadopoulou@consolut.com"
         message: "Update Postman Collection"
-
 
