Add workflow_dispatch for manual trigger

--- a/.github/workflows/update-postman-collection.yml
+++ b/.github/workflows/update-postman-collection.yml
@@ -3,6 +3,7 @@ name: Update Postman Collection
 on:
   schedule:
     - cron: '0 * * * *'  # Εκτελεί το action κάθε ώρα (μπορείς να το αλλάξεις)
+  workflow_dispatch:  # Προσθήκη για χειροκίνητο trigger
 
 jobs:
   update-collection:
@@ -19,18 +20,12 @@ jobs:
 
     - name: Commit and Push changes
       run: |
-        # Ρύθμιση του χρήστη και email για το Git
         git config user.name "GitHub Actions"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        
-        # Αλλαγή του remote URL ώστε να χρησιμοποιεί το προσωπικό token
         git remote set-url origin https://github.com/Dpapadopoulou96/Postman-Automate-Update-Collection.git
-        
-        # Προσθήκη των αλλαγών και commit
         git add postman-collection.json
         git commit -m "Update Postman Collection"
-        
-        # Push στις αλλαγές χρησιμοποιώντας το GH_TOKEN για αυθεντικοποίηση
         git push https://github.com/Dpapadopoulou96/Postman-Automate-Update-Collection.git HEAD:main
       env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Χρήση του PAT για το git push
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
