--- a/.github/workflows/update-postman-collection.yml
+++ b/.github/workflows/update-postman-collection.yml
@@ -19,12 +19,12 @@ jobs:
         -H "Accept: application/json" -o postman-collection.json
 
     - name: Commit and Push changes
+      env:
+        TOKEN: ${{ secrets.TestingToken }}  # Χρήση του PAT για το git push
       run: |
         git config user.name "GitHub Actions"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://github.com/Dpapadopoulou96/Postman-Automate-Update-Collection.git
         git add postman-collection.json
         git commit -m "Update Postman Collection"
-        git push https://github.com/Dpapadopoulou96/Postman-Automate-Update-Collection.git HEAD:main
-      env:
-        TestingToken: ${{ secrets.TestingToken }}  # Χρήση του PAT για το git push
+        git push https://$TOKEN@github.com/Dpapadopoulou96/Postman-Automate-Update-Collection.git HEAD:main
+
